feat: boxOffice batch update 로직 변경, performance genre, status enum field로 변경